[gd_scene load_steps=31 format=3 uid="uid://dt68dpqomsxdq"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_sp6rh"]
[ext_resource type="Script" uid="uid://chjukioypic0i" path="res://addons/CustomControls/Dialogs/CommandEvents/change_party_member_dialog.gd" id="2_5f0cx"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="3_jc2pr"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="4_xd0gl"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="6_omgo6"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="7_sklfr"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="8_rpkpo"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="9_2oj1v"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="10_qnk61"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iemuh"]

[sub_resource type="Gradient" id="Gradient_66ll8"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j32f4"]
gradient = SubResource("Gradient_66ll8")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37sfe"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_ctwx1"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sjxol"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jbam8"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_sjxol")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ve3q"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhd7t"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id="GradientTexture2D_li0sr"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oo5s1"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_li0sr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7r4w"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ButtonGroup" id="ButtonGroup_hid8t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iu3fr"]
texture = ExtResource("10_qnk61")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_occp0"]
texture = ExtResource("8_rpkpo")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n0new"]
texture = ExtResource("9_2oj1v")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wanv4"]
texture = ExtResource("7_sklfr")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yd8hk"]
texture = ExtResource("10_qnk61")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gommh"]
texture = ExtResource("8_rpkpo")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37igj"]
texture = ExtResource("9_2oj1v")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5rb3t"]
texture = ExtResource("7_sklfr")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ChangePartyMemberDialog" type="Window"]
title = "Change Party Member"
position = Vector2i(0, 36)
size = Vector2i(500, 290)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_sp6rh")
script = ExtResource("2_5f0cx")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_iemuh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j32f4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Actor" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_jc2pr")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_37sfe")
style1 = SubResource("StyleBoxFlat_37sfe")
style2 = SubResource("StyleBoxTexture_jbam8")
style3 = SubResource("StyleBoxFlat_6ve3q")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Actor"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Actor/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Actor/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Actor"

[node name="ActorID" parent="MarginContainer/VBoxContainer/Actor/MarginContainer/VBoxContainer" instance=ExtResource("4_xd0gl")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Selects the character to which this operation will be applied."
text_overrun_behavior = 3
selected = 0
item_count = 5
popup/item_0/text = "1: Aiden"
popup/item_0/id = 0
popup/item_1/text = "2: Elara"
popup/item_1/id = 1
popup/item_2/text = "3: Thorne"
popup/item_2/id = 2
popup/item_3/text = "4: Lyra"
popup/item_3/id = 3
popup/item_4/text = "5: Gideon"
popup/item_4/id = 4

[node name="Initialize" type="CheckBox" parent="MarginContainer/VBoxContainer/Actor/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "When Adding, reverts to the starting state as specified in the database"
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Initialize"

[node name="Operation" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_jc2pr")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hhd7t")
style1 = SubResource("StyleBoxFlat_hhd7t")
style2 = SubResource("StyleBoxTexture_oo5s1")
style3 = SubResource("StyleBoxFlat_h7r4w")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Operation"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Operation/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Operation"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OperationIncrease" type="CheckBox" parent="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Use Adds operator to change this data"
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true
button_group = SubResource("ButtonGroup_hid8t")
text = "Add"

[node name="OperationDecrease" type="CheckBox" parent="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Use Subtracts operator to change this data"
focus_mode = 0
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_hid8t")
text = "Remove"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_omgo6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_iu3fr")
theme_override_styles/hover = SubResource("StyleBoxTexture_occp0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n0new")
theme_override_styles/normal = SubResource("StyleBoxTexture_wanv4")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_omgo6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_yd8hk")
theme_override_styles/hover = SubResource("StyleBoxTexture_gommh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_37igj")
theme_override_styles/normal = SubResource("StyleBoxTexture_5rb3t")
text = "CANCEL"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Actor/MarginContainer/VBoxContainer/ActorID" to="." method="_on_actor_id_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Actor/MarginContainer/VBoxContainer/Initialize" to="." method="_on_initialize_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer/HBoxContainer/OperationIncrease" to="." method="_on_operation_increase_toggled" binds= [0]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Operation/MarginContainer/VBoxContainer/HBoxContainer/OperationDecrease" to="." method="_on_operation_decrease_toggled" binds= [1]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
